refactor getting first element